--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,16 @@
 </ion-header>
 
 <ion-content padding class="home">
+    <ion-grid *ngIf="status">
+        <ion-row> 
+            <ion-col width-50 offset-25>
+                <h1 class="status">{{status}}</h1>
+                <div class="icon">
+            <img src="../assets/icon/storm.ico">
+          </div>
+        </ion-col>
+        </ion-row>
+    </ion-grid>
   <ion-grid *ngIf="weather">
     <ion-row>
       <ion-col width-50 offset-25>
